:lipstick: Add secondary font-family to post tags

--- a/client/style.css
+++ b/client/style.css
@@ -81,7 +81,7 @@ a {
 }
 
 .post-tag {
-  font-family: 'Source Code Pro';
+  font-family: 'Source Code Pro', monospace;
   margin-right: 0.5em;
 }
 
